// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Messaging/Webex Activity Adaptive Card 1`] = `
Array [
  <div
    className="wxc wxc-activity"
  >
    <div
      className="wxc wxc-activity-header"
    >
      <div
        className="wxc wxc-avatar wxc-activity-header__avatar"
      >
        <div
          className="wxc-avatar__content"
        >
          <svg
            className="wxc-avatar__placeholder wxc-avatar__placeholder-6"
            viewBox="0 0 40 40"
          >
            <text
              x="50%"
              y="50%"
            >
              BS
            </text>
          </svg>
          <img
            alt="avatar"
            className="wxc-avatar__image"
            onError={[Function]}
            src="./images/brenda.png"
          />
        </div>
      </div>
      <div
        className="wxc-activity-header__author"
      >
        <span>
          Brenda Song
        </span>
        <span
          className="wxc-activity-header__timestamp"
        >
          02/01/2022, 1:00 PM
        </span>
      </div>
    </div>
    <div
      className="wxc-activity__content"
    >
      <div
        className="wxc wxc-adaptive-cards"
      >
        <div
          className="wxc wxc-adaptive-card wxc-adaptive-cards__card"
        >
          <div
            className="wxc wxc-ac-adaptive-card wxc wxc-ac wxc-adaptive-card__card wxc-ac-container--vertical wxc-ac-container--has-padding"
            style={Object {}}
          >
            <div
              className="wxc wxc-ac-spacer wxc-ac-spacer--spacing--default"
              style={
                Object {
                  "style": undefined,
                }
              }
            />
            <div
              className="wxc wxc-adaptive-cards-text-block wxc wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-is-visible--true wxc-ac-size--large"
              style={
                Object {
                  "WebkitLineClamp": undefined,
                }
              }
            >
              <div
                className="wxc wxc-markdown"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Hotel Booking",
                  }
                }
              />
            </div>
            <div
              className="wxc wxc-ac-spacer wxc-ac-spacer--spacing--medium"
              style={
                Object {
                  "style": undefined,
                }
              }
            >
              <div />
            </div>
            <div
              className="wxc wxc-container wxc wxc-ac wxc-ac-is-visible--true wxc-ac-vertical-content-alignment--top wxc-ac-container--vertical"
              style={Object {}}
            >
              <div
                className="wxc wxc-ac-spacer wxc-ac-spacer--spacing--default"
                style={
                  Object {
                    "style": undefined,
                  }
                }
              >
                <div />
              </div>
              <div
                className="wxc wxc-adaptive-cards-column-set wxc wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-is-visible--true wxc-ac-container--horizontal"
                style={Object {}}
              >
                <div
                  className="wxc wxc-ac-spacer wxc-ac-spacer--spacing--default"
                  style={
                    Object {
                      "style": undefined,
                    }
                  }
                />
                <div
                  className="wxc wxc-adaptive-cards-column wxc wxc-ac wxc-ac-is-visible--true wxc-ac-vertical-content-alignment--top wxc-ac-container--vertical"
                  style={
                    Object {
                      "flex": 1,
                    }
                  }
                >
                  <div
                    className="wxc wxc-ac-spacer wxc-ac-spacer--spacing--default"
                    style={
                      Object {
                        "style": undefined,
                      }
                    }
                  />
                  <div
                    className="wxc wxc-adaptive-cards-input-text wxc wxc-ac wxc-ac-is-visible--true wxc-ac-input-style--text wxc-ac-height--auto"
                    style={Object {}}
                  >
                    <div
                      className="wxc wxc-label wxc wxc-input-field wxc wxc-text-input wxc-adaptive-cards-input-text__input wxc-input-field--has-right-icon"
                    >
                      <label
                        className="wxc-label__label-text"
                        htmlFor="wxc-0-control"
                        id="wxc-0-label"
                      >
                        <span
                          className="wxc-label__text"
                        >
                          First Name
                        </span>
                        <span
                          className="wxc-label__required"
                        >
                           *
                        </span>
                      </label>
                      <div
                        className="wxc-label__control"
                      >
                        <div
                          className="wxc-input-field__form-control"
                        >
                          <input
                            aria-invalid="false"
                            aria-labelledby="wxc-0-label"
                            autoFocus={false}
                            className="wxc-input-field__input"
                            disabled={false}
                            id="wxc-0-control"
                            onChange={[Function]}
                            onKeyDown={[Function]}
                            required={true}
                            tabIndex={0}
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="wxc wxc-ac-spacer wxc-ac-spacer--spacing--default"
                  style={
                    Object {
                      "style": undefined,
                    }
                  }
                />
                <div
                  className="wxc wxc-adaptive-cards-column wxc wxc-ac wxc-ac-is-visible--true wxc-ac-vertical-content-alignment--top wxc-ac-container--vertical"
                  style={
                    Object {
                      "flex": 1,
                    }
                  }
                >
                  <div
                    className="wxc wxc-ac-spacer wxc-ac-spacer--spacing--default"
                    style={
                      Object {
                        "style": undefined,
                      }
                    }
                  />
                  <div
                    className="wxc wxc-adaptive-cards-input-text wxc wxc-ac wxc-ac-is-visible--true wxc-ac-input-style--text wxc-ac-height--auto"
                    style={Object {}}
                  >
                    <div
                      className="wxc wxc-label wxc wxc-input-field wxc wxc-text-input wxc-adaptive-cards-input-text__input wxc-input-field--has-right-icon"
                    >
                      <label
                        className="wxc-label__label-text"
                        htmlFor="wxc-0-control"
                        id="wxc-0-label"
                      >
                        <span
                          className="wxc-label__text"
                        >
                          Last Name
                        </span>
                        <span
                          className="wxc-label__required"
                        >
                           *
                        </span>
                      </label>
                      <div
                        className="wxc-label__control"
                      >
                        <div
                          className="wxc-input-field__form-control"
                        >
                          <input
                            aria-invalid="false"
                            aria-labelledby="wxc-0-label"
                            autoFocus={false}
                            className="wxc-input-field__input"
                            disabled={false}
                            id="wxc-0-control"
                            onChange={[Function]}
                            onKeyDown={[Function]}
                            required={true}
                            tabIndex={0}
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="wxc wxc-ac-spacer wxc-ac-spacer--spacing--default"
                style={
                  Object {
                    "style": undefined,
                  }
                }
              />
              <div
                className="wxc wxc-adaptive-cards-input-text wxc wxc-ac wxc-ac-is-visible--true wxc-ac-input-style--email wxc-ac-height--auto"
                style={Object {}}
              >
                <div
                  className="wxc wxc-label wxc wxc-input-field wxc wxc-text-input wxc-adaptive-cards-input-text__input wxc-input-field--has-right-icon"
                >
                  <label
                    className="wxc-label__label-text"
                    htmlFor="wxc-0-control"
                    id="wxc-0-label"
                  >
                    <span
                      className="wxc-label__text"
                    >
                      Email
                    </span>
                    <span
                      className="wxc-label__required"
                    >
                       *
                    </span>
                  </label>
                  <div
                    className="wxc-label__control"
                  >
                    <div
                      className="wxc-input-field__form-control"
                    >
                      <input
                        aria-invalid="false"
                        aria-labelledby="wxc-0-label"
                        autoFocus={false}
                        className="wxc-input-field__input"
                        disabled={false}
                        id="wxc-0-control"
                        onChange={[Function]}
                        onKeyDown={[Function]}
                        required={true}
                        tabIndex={0}
                        type="email"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="wxc wxc-ac-spacer wxc-ac-spacer--spacing--default"
              style={
                Object {
                  "style": undefined,
                }
              }
            />
            <div
              className="wxc wxc-label wxc wxc-dropdown wxc wxc-adaptive-cards-input-choice-set wxc wxc-ac wxc-ac-is-visible--true wxc-ac-container--vertical"
            >
              <label
                className="wxc-label__label-text"
                htmlFor="wxc-0-control"
                id="wxc-0-label"
              >
                <span
                  className="wxc-label__text"
                >
                  Room type
                </span>
                <span
                  className="wxc-label__required"
                >
                   *
                </span>
              </label>
              <div
                className="wxc-label__control"
              >
                <div
                  className="wxc-dropdown__control"
                  disabled={false}
                  onKeyDown={[Function]}
                >
                  <div
                    aria-controls="wxc-0-options"
                    aria-haspopup="listbox"
                    aria-invalid="false"
                    aria-labelledby="wxc-0-label"
                    className="wxc-dropdown__selected-option "
                    id="wxc-0-control"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="combobox"
                    tabIndex={0}
                  >
                    <span
                      className="wxc-dropdown__label"
                    >
                      Please select the room type
                    </span>
                    <svg
                      className="wxc-icon "
                      height={13}
                      style={Object {}}
                      viewBox="0 0 26 14"
                      width={13}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M25.7075 0.293202C25.52 0.105701 25.2656 0.000366211 25.0004 0.000366211C24.7353 0.000366211 24.4809 0.105701 24.2934 0.293202L13 11.5862L1.70699 0.293202C1.51851 0.110381 1.26568 0.00902984 1.0031 0.0110359C0.740528 0.013042 0.489278 0.118244 0.303611 0.303925C0.117943 0.489605 0.0127584 0.740862 0.0107709 1.00344C0.00878336 1.26601 0.110153 1.51883 0.292988 1.7073L12.293 13.7073C12.4805 13.8948 12.7348 14.0001 13 14.0001C13.2652 14.0001 13.5195 13.8948 13.707 13.7073L25.707 1.7073C25.8946 1.51984 26 1.26555 26.0001 1.00036C26.0002 0.735168 25.8949 0.4808 25.7075 0.293202Z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="wxc wxc-ac-spacer wxc-ac-spacer--spacing--default"
              style={
                Object {
                  "style": undefined,
                }
              }
            />
            <div
              className="wxc wxc-label wxc wxc-input-field wxc wxc-number-input wxc wxc-adaptive-cards-input-number wxc wxc-ac wxc-ac-is-visible--true wxc-input-field--has-right-icon wxc-input-field--has-right-controls"
              style={Object {}}
            >
              <label
                className="wxc-label__label-text"
                htmlFor="wxc-0-control"
                id="wxc-0-label"
              >
                <span
                  className="wxc-label__text"
                >
                  Number of Guests
                </span>
                <span
                  className="wxc-label__required"
                >
                   *
                </span>
              </label>
              <div
                className="wxc-label__control"
              >
                <div
                  className="wxc-input-field__form-control"
                >
                  <input
                    aria-invalid="false"
                    aria-labelledby="wxc-0-label"
                    autoFocus={false}
                    className="wxc-input-field__input"
                    disabled={false}
                    id="wxc-0-control"
                    max={10}
                    min={1}
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Please select the number of guests"
                    required={true}
                    tabIndex={0}
                    type="number"
                    value={0}
                  />
                  <span
                    className="wxc-input-field__right-icon"
                  >
                    <button
                      aria-label="Clear input"
                      autoFocus={false}
                      className="wxc wxc-button wxc-button--ghost"
                      onClick={[Function]}
                      style={
                        Object {
                          "height": 28,
                        }
                      }
                      tabIndex={0}
                      type="button"
                    >
                      <svg
                        className="wxc-icon "
                        height={16}
                        style={Object {}}
                        viewBox="0 0 24 24"
                        width={16}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M13.0596 11.9998L19.2794 5.78001C19.349 5.71038 19.4042 5.6277 19.4419 5.53672C19.4796 5.44573 19.499 5.34822 19.499 5.24974C19.499 5.15126 19.4796 5.05374 19.4419 4.96276C19.4042 4.87177 19.349 4.7891 19.2793 4.71947C19.2097 4.64983 19.127 4.5946 19.036 4.55691C18.945 4.51923 18.8475 4.49983 18.7491 4.49983C18.6506 4.49984 18.5531 4.51924 18.4621 4.55692C18.3711 4.59461 18.2884 4.64985 18.2188 4.71949L11.999 10.9392L5.77929 4.71949C5.70979 4.64921 5.62709 4.59335 5.53594 4.55514C5.44478 4.51692 5.34697 4.49711 5.24813 4.49683C5.14929 4.49655 5.05137 4.51581 4.96 4.55351C4.86863 4.59121 4.78562 4.64659 4.71573 4.71648C4.64584 4.78638 4.59045 4.8694 4.55276 4.96077C4.51507 5.05214 4.49581 5.15006 4.4961 5.2489C4.49638 5.34774 4.5162 5.44555 4.55442 5.5367C4.59264 5.62786 4.6485 5.71055 4.71879 5.78004L10.9385 11.9998L4.71879 18.2195C4.64915 18.2892 4.59391 18.3718 4.55622 18.4628C4.51853 18.5538 4.49914 18.6513 4.49914 18.7498C4.49914 18.8483 4.51853 18.9458 4.55622 19.0368C4.59391 19.1278 4.64915 19.2105 4.71878 19.2801C4.78842 19.3497 4.87109 19.405 4.96207 19.4427C5.05306 19.4803 5.15057 19.4997 5.24906 19.4997C5.34754 19.4997 5.44505 19.4803 5.53604 19.4427C5.62702 19.405 5.70969 19.3497 5.77933 19.2801L11.9991 13.0603L18.2188 19.2801C18.3595 19.4207 18.5502 19.4997 18.7491 19.4997C18.948 19.4997 19.1387 19.4207 19.2794 19.2801C19.42 19.1395 19.499 18.9487 19.499 18.7498C19.499 18.5509 19.42 18.3602 19.2794 18.2195L13.0596 11.9998Z"
                          fillOpacity="0.95"
                        />
                      </svg>
                    </button>
                    
                  </span>
                  <div
                    className="wxc-input-field__right-controls"
                  >
                    <div
                      className="wxc-number-input__controls"
                    >
                      <button
                        aria-label="Increase value"
                        autoFocus={false}
                        className="wxc wxc-button wxc-number-input__increment-button wxc-button--ghost"
                        onClick={[Function]}
                        style={
                          Object {
                            "height": 32,
                          }
                        }
                        tabIndex={0}
                        type="button"
                      >
                        <svg
                          className="wxc-icon "
                          height={13}
                          style={Object {}}
                          viewBox="0 0 14 7"
                          width={13}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M0.552614 4.2235C0.581975 4.28225 0.62262 4.33463 0.672228 4.37766C0.721836 4.42069 0.779435 4.45353 0.841736 4.4743C0.904037 4.49507 0.969819 4.50336 1.03533 4.4987C1.10083 4.49405 1.16478 4.47653 1.22351 4.44715L6.99996 1.55895L12.7762 4.44715C12.8948 4.50647 13.0322 4.51623 13.158 4.47429C13.2838 4.43235 13.3878 4.34215 13.4471 4.22353C13.5065 4.1049 13.5162 3.96757 13.4743 3.84175C13.4323 3.71593 13.3421 3.61192 13.2235 3.5526L7.22351 0.552603C7.15406 0.517913 7.07749 0.499854 6.99986 0.499854C6.92223 0.499854 6.84566 0.517913 6.77621 0.552603L0.776214 3.5526C0.717475 3.58197 0.665097 3.62262 0.622069 3.67223C0.579042 3.72184 0.546209 3.77944 0.525445 3.84174C0.504681 3.90404 0.496394 3.96982 0.501056 4.03532C0.505717 4.10083 0.523237 4.16477 0.552614 4.2235Z"
                          />
                        </svg>
                      </button>
                      
                      <button
                        aria-label="Decrease value"
                        autoFocus={false}
                        className="wxc wxc-button wxc-number-input__decrement-button wxc-button--ghost"
                        onClick={[Function]}
                        style={
                          Object {
                            "height": 32,
                          }
                        }
                        tabIndex={0}
                        type="button"
                      >
                        <svg
                          className="wxc-icon "
                          height={13}
                          style={Object {}}
                          viewBox="0 0 14 7"
                          width={13}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M0.776062 3.44715L6.77631 6.44715C6.84576 6.48183 6.92232 6.49988 6.99994 6.49988C7.07756 6.49988 7.15412 6.48183 7.22356 6.44715L13.2236 3.44715C13.3422 3.38784 13.4324 3.28384 13.4743 3.15802C13.4951 3.09572 13.5034 3.02994 13.4987 2.96444C13.4941 2.89894 13.4766 2.83499 13.4472 2.77625C13.4178 2.71752 13.3772 2.66514 13.3276 2.62211C13.278 2.57908 13.2204 2.54625 13.1581 2.52548C13.0323 2.48354 12.8949 2.49329 12.7763 2.5526L6.99991 5.4408L1.22331 2.5526C1.10469 2.4933 0.967361 2.48354 0.841543 2.52548C0.779244 2.54625 0.721645 2.57908 0.672036 2.62211C0.622427 2.66514 0.581778 2.71752 0.552412 2.77625C0.523045 2.83499 0.505535 2.89894 0.500881 2.96444C0.496227 3.02995 0.504521 3.09572 0.525289 3.15802C0.546057 3.22032 0.578891 3.27792 0.621919 3.32753C0.664947 3.37714 0.717325 3.41779 0.776062 3.44715Z"
                          />
                        </svg>
                      </button>
                      
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="wxc wxc-ac-spacer wxc-ac-spacer--spacing--default"
              style={
                Object {
                  "style": undefined,
                }
              }
            />
            <div
              className="wxc wxc-adaptive-cards-column-set wxc wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-is-visible--true wxc-ac-container--horizontal"
              style={Object {}}
            >
              <div
                className="wxc wxc-ac-spacer wxc-ac-spacer--spacing--default"
                style={
                  Object {
                    "style": undefined,
                  }
                }
              />
              <div
                className="wxc wxc-adaptive-cards-column wxc wxc-ac wxc-ac-is-visible--true wxc-ac-vertical-content-alignment--top wxc-ac-container--vertical"
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <div
                  className="wxc wxc-ac-spacer wxc-ac-spacer--spacing--default"
                  style={
                    Object {
                      "style": undefined,
                    }
                  }
                />
                <div
                  className="wxc wxc-label wxc wxc-input-field wxc wxc-date-input wxc wxc-adaptive-cards-input-date wxc wxc-ac wxc-ac-is-visible--true wxc-ac-height--auto"
                  style={Object {}}
                >
                  <label
                    className="wxc-label__label-text"
                    htmlFor="wxc-0-control"
                    id="wxc-0-label"
                  >
                    <span
                      className="wxc-label__text"
                    >
                      Arrival Date
                    </span>
                    <span
                      className="wxc-label__required"
                    >
                       *
                    </span>
                  </label>
                  <div
                    className="wxc-label__control"
                  >
                    <div
                      className="wxc-input-field__form-control"
                    >
                      <input
                        aria-invalid="false"
                        aria-labelledby="wxc-0-label"
                        autoFocus={false}
                        className="wxc-input-field__input"
                        disabled={false}
                        id="wxc-0-control"
                        onChange={[Function]}
                        onKeyDown={[Function]}
                        required={true}
                        tabIndex={0}
                        type="date"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="wxc wxc-ac-spacer wxc-ac-spacer--spacing--default"
                style={
                  Object {
                    "style": undefined,
                  }
                }
              />
              <div
                className="wxc wxc-adaptive-cards-column wxc wxc-ac wxc-ac-is-visible--true wxc-ac-vertical-content-alignment--top wxc-ac-container--vertical"
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <div
                  className="wxc wxc-ac-spacer wxc-ac-spacer--spacing--default"
                  style={
                    Object {
                      "style": undefined,
                    }
                  }
                />
                <div
                  className="wxc wxc-label wxc wxc-input-field wxc wxc-time-input wxc wxc-adaptive-cards-input-time wxc wxc-ac wxc-ac-is-visible--true"
                  style={Object {}}
                >
                  <label
                    className="wxc-label__label-text"
                    htmlFor="wxc-0-control"
                    id="wxc-0-label"
                  >
                    <span
                      className="wxc-label__text"
                    >
                      Arrival Time
                    </span>
                    <span
                      className="wxc-label__required"
                    >
                       *
                    </span>
                  </label>
                  <div
                    className="wxc-label__control"
                  >
                    <div
                      className="wxc-input-field__form-control"
                    >
                      <input
                        aria-invalid="false"
                        aria-labelledby="wxc-0-label"
                        autoFocus={false}
                        className="wxc-input-field__input"
                        disabled={false}
                        id="wxc-0-control"
                        onChange={[Function]}
                        onKeyDown={[Function]}
                        required={true}
                        tabIndex={0}
                        type="time"
                        value="10:00"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="wxc wxc-ac-spacer wxc-ac-spacer--spacing--default"
              style={
                Object {
                  "style": undefined,
                }
              }
            />
            <div
              className="wxc wxc-label wxc wxc-input-field wxc wxc-date-input wxc wxc-adaptive-cards-input-date wxc wxc-ac wxc-ac-is-visible--true wxc-ac-height--auto"
              style={Object {}}
            >
              <label
                className="wxc-label__label-text"
                htmlFor="wxc-0-control"
                id="wxc-0-label"
              >
                <span
                  className="wxc-label__text"
                >
                  Departure Date
                </span>
                <span
                  className="wxc-label__required"
                >
                   *
                </span>
              </label>
              <div
                className="wxc-label__control"
              >
                <div
                  className="wxc-input-field__form-control"
                >
                  <input
                    aria-invalid="false"
                    aria-labelledby="wxc-0-label"
                    autoFocus={false}
                    className="wxc-input-field__input"
                    disabled={false}
                    id="wxc-0-control"
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    required={true}
                    tabIndex={0}
                    type="date"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              className="wxc wxc-ac-spacer wxc-ac-spacer--spacing--medium"
              style={
                Object {
                  "style": undefined,
                }
              }
            />
            <div
              className="wxc wxc-label wxc wxc-radio-set wxc wxc-adaptive-cards-input-choice-set wxc wxc-ac wxc-ac-is-visible--true wxc-ac-container--vertical"
              style={Object {}}
            >
              <label
                className="wxc-label__label-text"
                htmlFor="wxc-0-control"
                id="wxc-0-label"
              >
                <span
                  className="wxc-label__text"
                >
                  Free pickup?
                </span>
                <span
                  className="wxc-label__required"
                >
                   *
                </span>
              </label>
              <div
                className="wxc-label__control"
              >
                <div
                  aria-invalid="false"
                  aria-labelledby="wxc-0-label"
                  role="radiogroup"
                >
                  <div
                    aria-checked={false}
                    aria-disabled={false}
                    className="wxc wxc-radio-button wxc-radio-button--enabled"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="radio"
                    tabIndex={0}
                  >
                    <div
                      className="wxc-radio-button__background"
                    />
                    <span
                      className="wxc-radio-button__title"
                    >
                      Yes Please! - Pick me up on arrival
                    </span>
                  </div>
                  <div
                    aria-checked={false}
                    aria-disabled={false}
                    className="wxc wxc-radio-button wxc-radio-button--enabled"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="radio"
                    tabIndex={-1}
                  >
                    <div
                      className="wxc-radio-button__background"
                    />
                    <span
                      className="wxc-radio-button__title"
                    >
                      No Thanks - I will make my own way there
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="wxc wxc-ac-spacer wxc-ac-spacer--spacing--default"
              style={
                Object {
                  "style": undefined,
                }
              }
            />
            <div
              className="wxc wxc-adaptive-cards-action-set wxc wxc-ac wxc-ac-is-visible--true wxc-ac-container--horizontal"
              style={Object {}}
            >
              <button
                autoFocus={false}
                className="wxc wxc-button wxc wxc-ac-action wxc wxc-ac-action-submit wxc wxc-ac wxc-ac-action-style--default wxc-button--primary"
                onClick={[Function]}
                style={
                  Object {
                    "height": 32,
                  }
                }
                tabIndex={0}
                type="button"
              >
                <span>
                  Submit
                </span>
              </button>
              
            </div>
            <div />
          </div>
        </div>
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Messaging/Webex Activity Created Long Back 1`] = `
Array [
  <div
    className="wxc wxc-activity"
  >
    <div
      className="wxc wxc-activity-header"
    >
      <div
        className="wxc wxc-avatar wxc-activity-header__avatar"
      >
        <div
          className="wxc-avatar__content"
        >
          <svg
            className="wxc-avatar__placeholder wxc-avatar__placeholder-6"
            viewBox="0 0 40 40"
          >
            <text
              x="50%"
              y="50%"
            >
              BG
            </text>
          </svg>
          <img
            alt="avatar"
            className="wxc-avatar__image"
            onError={[Function]}
            src="./images/barbara.png"
          />
          <div
            className="wxc-avatar__status-icon-container"
          >
            <svg
              className="wxc-icon wxc-avatar__status-icon wxc-avatar__status-dnd"
              fill="none"
              height={24}
              style={Object {}}
              viewBox="0 0 32 32"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clipRule="evenodd"
                d="M16 29.5C23.4558 29.5 29.5 23.4558 29.5 16C29.5 8.54416 23.4558 2.5 16 2.5C8.54416 2.5 2.5 8.54416 2.5 16C2.5 23.4558 8.54416 29.5 16 29.5ZM10 15C9.44772 15 9 15.4477 9 16C9 16.5523 9.44772 17 10 17H22C22.5523 17 23 16.5523 23 16C23 15.4477 22.5523 15 22 15H10Z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        className="wxc-activity-header__author"
      >
        <span>
          Barbara German
        </span>
        <span
          className="wxc-activity-header__timestamp"
        >
          07/25/2020, 10:00 AM
        </span>
      </div>
    </div>
    <div
      className="wxc-activity__content"
    >
      <div
        className="wxc-activity__message"
      >
        The login page seems to be confusing a lot of people! Let's brainstorm some new designs
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Messaging/Webex Activity Created This Week 1`] = `
Array [
  <div
    className="wxc wxc-activity"
  >
    <div
      className="wxc wxc-activity-header"
    >
      <div
        className="wxc wxc-avatar wxc-activity-header__avatar"
      >
        <div
          className="wxc-avatar__content"
        >
          <svg
            className="wxc-avatar__placeholder wxc-avatar__placeholder-6"
            viewBox="0 0 40 40"
          >
            <text
              x="50%"
              y="50%"
            >
              BG
            </text>
          </svg>
          <img
            alt="avatar"
            className="wxc-avatar__image"
            onError={[Function]}
            src="./images/barbara.png"
          />
          <div
            className="wxc-avatar__status-icon-container"
          >
            <svg
              className="wxc-icon wxc-avatar__status-icon wxc-avatar__status-dnd"
              fill="none"
              height={24}
              style={Object {}}
              viewBox="0 0 32 32"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clipRule="evenodd"
                d="M16 29.5C23.4558 29.5 29.5 23.4558 29.5 16C29.5 8.54416 23.4558 2.5 16 2.5C8.54416 2.5 2.5 8.54416 2.5 16C2.5 23.4558 8.54416 29.5 16 29.5ZM10 15C9.44772 15 9 15.4477 9 16C9 16.5523 9.44772 17 10 17H22C22.5523 17 23 16.5523 23 16C23 15.4477 22.5523 15 22 15H10Z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        className="wxc-activity-header__author"
      >
        <span>
          Barbara German
        </span>
        <span
          className="wxc-activity-header__timestamp"
        >
          Thursday, 10:00 AM
        </span>
      </div>
    </div>
    <div
      className="wxc-activity__content"
    >
      <div
        className="wxc-activity__message"
      >
        Following up on our last task. Seems like we need more time?
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Messaging/Webex Activity Created Today 1`] = `
Array [
  <div
    className="wxc wxc-activity"
  >
    <div
      className="wxc wxc-activity-header"
    >
      <div
        className="wxc wxc-avatar wxc-activity-header__avatar"
      >
        <div
          className="wxc-avatar__content"
        >
          <svg
            className="wxc-avatar__placeholder wxc-avatar__placeholder-6"
            viewBox="0 0 40 40"
          >
            <text
              x="50%"
              y="50%"
            >
              SD
            </text>
          </svg>
          <img
            alt="avatar"
            className="wxc-avatar__image"
            onError={[Function]}
            src="./images/simon.png"
          />
        </div>
      </div>
      <div
        className="wxc-activity-header__author"
      >
        <span>
          Simon Damiano
        </span>
        <span
          className="wxc-activity-header__timestamp"
        >
          10:00 AM
        </span>
      </div>
    </div>
    <div
      className="wxc-activity__content"
    >
      <div
        className="wxc-activity__message"
      >
        Hey guys! I'm going to skip standup today, not feeling great 🤢
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Messaging/Webex Activity Created Yesterday 1`] = `
Array [
  <div
    className="wxc wxc-activity"
  >
    <div
      className="wxc wxc-activity-header"
    >
      <div
        className="wxc wxc-avatar wxc-activity-header__avatar"
      >
        <div
          className="wxc-avatar__content"
        >
          <svg
            className="wxc-avatar__placeholder wxc-avatar__placeholder-6"
            viewBox="0 0 40 40"
          >
            <text
              x="50%"
              y="50%"
            >
              BS
            </text>
          </svg>
          <img
            alt="avatar"
            className="wxc-avatar__image"
            onError={[Function]}
            src="./images/brandon.png"
          />
        </div>
      </div>
      <div
        className="wxc-activity-header__author"
      >
        <span>
          Brandon Seeger
        </span>
        <span
          className="wxc-activity-header__timestamp"
        >
          Yesterday, 10:00 AM
        </span>
      </div>
    </div>
    <div
      className="wxc-activity__content"
    >
      <div
        className="wxc-activity__message"
      >
        Got some of the new designs for the login page, will send the Figma links tomorrow
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Messaging/Webex Activity Multi Line 1`] = `
Array [
  <div
    className="wxc wxc-activity"
  >
    <div
      className="wxc wxc-activity-header"
    >
      <div
        className="wxc wxc-avatar wxc-activity-header__avatar"
      >
        <div
          className="wxc-avatar__content"
        >
          <svg
            className="wxc-avatar__placeholder wxc-avatar__placeholder-6"
            viewBox="0 0 40 40"
          >
            <text
              x="50%"
              y="50%"
            >
              GE
            </text>
          </svg>
          <img
            alt="avatar"
            className="wxc-avatar__image"
            onError={[Function]}
            src="./images/giacomo.png"
          />
        </div>
      </div>
      <div
        className="wxc-activity-header__author"
      >
        <span>
          Giacomo Edwards
        </span>
        <span
          className="wxc-activity-header__timestamp"
        >
          10:05 AM
        </span>
      </div>
    </div>
    <div
      className="wxc-activity__content"
    >
      <div
        className="wxc-activity__message"
      >
        I ran into the same issue before! Have you checked your OS permissions?
Sometimes that is disabled for the browser and causes the app to not load properly.
Let me know if you need more help! Maybe we can talk about it during standup
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Messaging/Webex Activity No Header 1`] = `
Array [
  <div
    className="wxc wxc-activity"
  >
    <div
      className="wxc-activity__content"
    >
      <div
        className="wxc-activity__message"
      >
        Can someone help me troubleshoot?
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;
